--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,2 +1,3 @@
-/* import sb-admin.css */
+@import "@fortawesome/fontawesome-free/css/all.min.css";
+@import "bootstrap/dist/css/bootstrap.min.css";
 @import "sb-admin.css";
